--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
 remote_theme: allejo/jekyll-docs-theme@v1.0.0
+license:
+  software: MIT License
+  software_url: http://opensource.org/licenses/MIT
+
+  docs: CC BY 3.0
+  docs_url: http://creativecommons.org/licenses/by/3.0/
+links:
+  header:
+    - title: GitHub
+      url: https://github.com/kristapsmu/progr
