--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 remote_theme: allejo/jekyll-docs-theme@v1.0.0
+name: Palīdzība programmēšanā
 license:
   software: MIT License
   software_url: http://opensource.org/licenses/MIT
