--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: allejo/jekyll-docs-theme@v1.0.0
+remote_theme: rundocs/jekyll-rtd-theme
 name: Palīdzība programmēšanā
 license:
   software: MIT License
