--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
+title: ProgHelp
+lang: lv
+description: Vietne programmēšanaas palīdzībai
+
 remote_theme: rundocs/jekyll-rtd-theme
-lsi: false
-safe: true
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
+
+readme_index:
+  with_frontmatter: true
