--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,27 @@ lang: lv
 description: Vietne programmēšanaas palīdzībai
 
 remote_theme: rundocs/jekyll-rtd-theme
-
 readme_index:
   with_frontmatter: true
+  
+translate:
+  # shortcodes
+  danger: Uzmanību
+  note: Piezīme
+  tip: Ieteikums
+  warning: Brīdinājums
+  # 404
+  not_found: Nekas netika atrasts
+  # copyright
+  revision: Kristaps Muižnieks
+  # search
+  searching: Meklē
+  search: Meklēt
+  search_docs: Meklēt dokumentus
+  search_results: Meklēt rezultātus
+  search_results_found: # the "#" in this translate will replaced with results size!
+  search_results_not_found: Rezultāti netika atrasti
+  plugins:
+  - jemoji
+  - jekyll-avatar
+  - jekyll-mentions
