--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ translate:
   # 404
   not_found: Nekas netika atrasts
   # copyright
-  revision: Kristaps Muižnieks
+  revision: Izstrādājis Kristaps Muižnieks (kristaps.muiznieks@bvsk.lv)
   # search
   searching: Meklē
   search: Meklēt
