--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ProgHelp
 lang: lv
-description: Vietne programmēšanaas palīdzībai
+description: Vietne programmēšanas palīdzībai
 
 remote_theme: rundocs/jekyll-rtd-theme
 readme_index:
