--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: ProgHelp
 description: Vietne palīdzībai programmēšanā
 baseurl: "/" # the subpath of your site, e.g. /blog
 #url: "https://pmarsceill.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-
+encoding: utf-8
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
 , "docs/tests/"
