--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.9",
-    "@vuepress/plugin-docsearch": "^2.0.0-rc.21",
+    "@vuepress/plugin-docsearch": "",
     "vue": "^3.4.21",
     "vuepress": "2.0.0-rc.9",
     "vuepress-theme-hope": "2.0.0-rc.32"
   },
   "dependencies": {
     "@vuepress/plugin-google-analytics": "^1.9.10",
-    "@vuepress/plugin-search": "^2.0.0-rc.21"
+    "@vuepress/plugin-search": ""
   }
 }
