CE sadaļa, VUE atjauninājums

--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.9",
-    "@vuepress/plugin-docsearch": "",
-    "vue": "^3.4.21",
-    "vuepress": "2.0.0-rc.9",
-    "vuepress-theme-hope": "2.0.0-rc.32"
+    "@vuepress/bundler-vite": "2.0.0-rc.24",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.112",
+    "@vuepress/plugin-shiki": "2.0.0-rc.112",
+    "sass-embedded": "^1.92.1",
+    "vue": "^3.5.21",
+    "vuepress": "2.0.0-rc.24",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.94",
+    "vuepress-theme-hope": "2.0.0-rc.94"
   },
   "dependencies": {
-    "@vuepress/plugin-google-analytics": "^1.9.10",
-    "@vuepress/plugin-search": ""
+    "@vuepress/plugin-google-analytics": "2.0.0-rc.112",
+    "@vuepress/plugin-search": "2.0.0-rc.112"
   }
 }
