--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.24",
     "@vuepress/plugin-docsearch": "2.0.0-rc.112",
+    "@vuepress/plugin-git": "^2.0.0-rc.112",
     "@vuepress/plugin-shiki": "2.0.0-rc.112",
     "sass-embedded": "^1.92.1",
     "vue": "^3.5.21",
